# anixe_cli

./: .gitignore  Cargo.toml
src/: command_line.rs  hotels.rs  main.rs  room_names.rs  test.rs
tests/: integration_test.rs
