[package]
name = "anixe_cli"
version = "0.1.0"
authors = ["Konrad Podstawski <konradpodstawskii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
csv = "1.1.6"
chrono = "0.4.19"
loading = "0.1.2"