[package]
name = "anixe_cli"
version = "0.1.0"
authors = ["Konrad Podstawski <konradpodstawskii@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.23"
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
csv = "1.1.6"
chrono = "0.4.19"
assert_cmd = "2.0.1"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = 'abort'